--- a/web/src/templates/prismanis.html
+++ b/web/src/templates/prismanis.html
@@ -4,11 +4,15 @@
     <div class="toolbox absolute top-2 left-2 flex flex-col gap-2">
         <label class="icon-btn default">
             <i class="las la-paint-brush"></i>
-            <input type="radio" value="toggle-draw" name="tool" class="hidden" checked />
+            <input type="radio" value="toggle-draw" name="tool" class="sr-only" checked />
         </label>
         <label class="icon-btn default">
             <i class="las la-lightbulb"></i>
-            <input type="radio" value="toggle-light-source" name="tool" class="hidden" />
+            <input type="radio" value="toggle-light-source" name="tool" class="sr-only" />
+        </label>
+        <label class="icon-btn default">
+            <i class="las la-mouse-pointer"></i>
+            <input type="radio" value="toggle-select" name="tool" class="sr-only" />
         </label>
         <button class="icon-btn danger" id="clear-btn">
             <i class="las la-trash"></i>
