add position transformation

--- a/web/src/templates/prismanis.html
+++ b/web/src/templates/prismanis.html
@@ -12,7 +12,7 @@
         </label>
         <label class="icon-btn default">
             <i class="las la-mouse-pointer"></i>
-            <input type="radio" value="toggle-select" name="tool" class="sr-only" />
+            <input type="radio" value="toggle-transform" name="tool" class="sr-only" />
         </label>
         <button class="icon-btn danger" id="clear-btn">
             <i class="las la-trash"></i>
