undo buttons disabling

--- a/web/src/static/css/styles/base/theme.css
+++ b/web/src/static/css/styles/base/theme.css
@@ -54,4 +54,8 @@
             color: var(--color-white);
         }
     }
+    :disabled {
+        cursor: not-allowed;
+        opacity: 0.6;
+    }
 }
