--- a/web/src/templates/prismanis.html
+++ b/web/src/templates/prismanis.html
@@ -8,11 +8,11 @@
         </label>
         <label class="icon-btn default">
             <i class="las la-paint-brush"></i>
-            <input type="radio" value="toggle-draw" name="tool" class="sr-only" checked />
+            <input type="radio" value="toggle-paint" name="tool" class="sr-only" checked />
         </label>
         <label class="icon-btn warning">
             <i class="las la-lightbulb"></i>
-            <input type="radio" value="toggle-light-source" name="tool" class="sr-only" />
+            <input type="radio" value="toggle-raycast" name="tool" class="sr-only" />
         </label>
         <button class="icon-btn danger" id="clear-btn">
             <i class="las la-trash"></i>
