--- a/web/src/static/css/styles/base/space.css
+++ b/web/src/static/css/styles/base/space.css
@@ -13,4 +13,5 @@
     --space-20: calc(var(--space-1) * 20);
     --space-24: calc(var(--space-1) * 24);
     --space-32: calc(var(--space-1) * 32);
+    --space-72: calc(var(--space-1) * 72);
 }
