--- a/web/src/templates/prismanis.html
+++ b/web/src/templates/prismanis.html
@@ -37,5 +37,6 @@
 		</div>
 	</aside>
 	<div class="flex-1 h-full"><canvas id="canvas"></canvas></div>
+	<p class="absolute top-0 right-1 text-xs">Point count: <span id="point-count">0</span></p>
 </div>
 {{ end }}
