--- a/web/src/static/css/styles/base/theme.css
+++ b/web/src/static/css/styles/base/theme.css
@@ -100,6 +100,10 @@
         }
     }
 
+    .warning-text {
+        color: var(--color-yellow-400);
+    }
+
     .danger {
         background-color: var(--color-red-950);
         border: 1px solid var(--color-red-900);
@@ -111,6 +115,11 @@
             color: var(--color-white);
         }
     }
+
+    .danger-text {
+        color: var(--color-red-400);
+    }
+
     :disabled {
         cursor: not-allowed;
         opacity: 0.6;
