--- a/web/src/templates/prismanis.html
+++ b/web/src/templates/prismanis.html
@@ -1,6 +1,6 @@
 {{ define "content" }}
 <div class="relative grid grid-cols-[auto_1fr] h-full">
-	<aside class="relative sidebar rect border-t-0 border-l-0 border-b-0 h-full flex flex-col w-[var(--sidebar-width)]">
+	<aside class="relative sidebar rect border-t-0 border-l-0 border-b-0 h-full flex flex-col w-(--sidebar-width)">
 		<section class="min-h-48">
 			<h3>Tool options</h3>
 			<!-- JS populated -->
