improve rendering & prepare for lenses

--- a/web/src/templates/prismanis.html
+++ b/web/src/templates/prismanis.html
@@ -21,6 +21,10 @@
 				<i class="las la-paint-brush"></i>
 				<input type="radio" value="toggle-paint" name="tool" class="sr-only" checked />
 			</label>
+			<label class="icon-btn default hidden">
+				<i class="las la-glasses"></i>
+				<input type="radio" value="toggle-lens" name="tool" class="sr-only" />
+			</label>
 			<label class="icon-btn warning">
 				<i class="las la-lightbulb"></i>
 				<input type="radio" value="toggle-raycast" name="tool" class="sr-only" />
