--- a/web/src/templates/prismanis.html
+++ b/web/src/templates/prismanis.html
@@ -21,7 +21,7 @@
 				<i class="las la-paint-brush"></i>
 				<input type="radio" value="toggle-paint" name="tool" class="sr-only" checked />
 			</label>
-			<label class="icon-btn default hidden">
+			<label class="icon-btn default">
 				<i class="las la-glasses"></i>
 				<input type="radio" value="toggle-lens" name="tool" class="sr-only" />
 			</label>
