--- a/web/src/static/css/styles/base/layout.css
+++ b/web/src/static/css/styles/base/layout.css
@@ -5,5 +5,8 @@
         align-items: center;
         padding: var(--space-2) var(--space-4);
         gap: var(--space-3);
+        img {
+            height: var(--space-12);
+        }
     }
 }
