display tool name in tool options

--- a/web/src/templates/prismanis.html
+++ b/web/src/templates/prismanis.html
@@ -2,7 +2,7 @@
 <div class="relative grid grid-cols-[auto_1fr] h-full">
 	<aside class="relative sidebar rect border-t-0 border-l-0 border-b-0 h-full flex flex-col w-(--sidebar-width)">
 		<section class="min-h-48">
-			<h3>Tool options</h3>
+			<h3 id="tool-name">Tool options</h3>
 			<!-- JS populated -->
 			<p id="tool-description" class="text-sm"></p>
 			<div id="tool-options" class="flex flex-col gap-3 mt-3"></div>
