--- a/web/src/templates/prismanis.html
+++ b/web/src/templates/prismanis.html
@@ -10,7 +10,7 @@
 		<section class="flex-1">
 			<h3>Scene objects</h3>
 			<!-- JS populated -->
-			<div id="scene-objects"></div>
+			<select multiple id="scene-objects"></select>
 		</section>
 		<div class="toolbox absolute top-2 -right-2 translate-x-full flex flex-col gap-2">
 			<label class="icon-btn default">
