--- a/web/src/templates/prismanis.html
+++ b/web/src/templates/prismanis.html
@@ -23,6 +23,10 @@
 					<input type="radio" value="toggle-paint" name="tool" class="sr-only" checked />
 				</label>
 				<label class="icon-btn default">
+					<i class="las la-shapes"></i>
+					<input type="radio" value="toggle-prism" name="tool" class="sr-only" />
+				</label>
+				<label class="icon-btn default">
 					<i class="las la-glasses"></i>
 					<input type="radio" value="toggle-lens" name="tool" class="sr-only" />
 				</label>
