--- a/web/src/templates/prismanis.html
+++ b/web/src/templates/prismanis.html
@@ -7,10 +7,10 @@
 			<p id="tool-description" class="text-sm"></p>
 			<div id="tool-options" class="flex flex-col gap-3 mt-3"></div>
 		</section>
-		<section class="flex-1">
+		<section class="flex-1 flex flex-col">
 			<h3>Scene objects</h3>
 			<!-- JS populated -->
-			<select multiple id="scene-objects"></select>
+			<select multiple id="scene-objects" class="h-full"></select>
 		</section>
 		<div class="toolbox absolute top-2 -right-2 translate-x-full flex flex-col gap-2">
 			<div class="flex flex-col gap-2 has-focus-visible:outline-blue-500 has-focus-visible:outline outline-offset-4 rounded-xl">
