--- a/web/src/templates/prismanis.html
+++ b/web/src/templates/prismanis.html
@@ -35,6 +35,7 @@
 					<input type="radio" value="toggle-raycast" name="tool" class="sr-only" />
 				</label>
 			</div>
+			<hr class="w-2/3 mx-auto">
 			<button class="icon-btn danger" id="clear-btn">
 				<i class="las la-trash"></i>
 			</button>
