--- a/web/src/static/css/styles/base/theme.css
+++ b/web/src/static/css/styles/base/theme.css
@@ -31,6 +31,7 @@
         padding: 0;
         
         section {
+            &.has-top-border,
             &:not(:first-child) {
                 border-top: 1px solid var(--color-stone-700);
             }
