--- a/web/src/static/css/styles/base/layout.css
+++ b/web/src/static/css/styles/base/layout.css
@@ -3,10 +3,15 @@
         width: 100%;
         display: flex;
         align-items: center;
-        padding: var(--space-2) var(--space-4);
-        gap: var(--space-3);
-        img {
-            height: var(--space-12);
+        justify-content: space-between;
+        > * {
+            display: flex;
+            align-items: center;
+            padding: var(--space-2) var(--space-4);
+            gap: var(--space-6);
+            img {
+                height: var(--space-12);
+            }
         }
     }
 }
