--- a/web/src/templates/base.html
+++ b/web/src/templates/base.html
@@ -9,9 +9,16 @@
 	</head>
 	<body>
 		<header>
-			<img src="/static/assets/img/image.png" alt="Logo" class="logo" />
-			<a href="/">Index</a>
-			<a href="/prismanis">Prismanis</a>
+			<div class="right">
+				<img src="/static/assets/img/image.png" alt="Logo" class="logo" />
+				<a href="/" class="pretty-link">Index</a>
+				<a href="/prismanis" class="pretty-link">Prismanis</a>
+			</div>
+			<div class="left">
+				<a href="https://github.com/omgaXD/omgafoo" target="_blank">
+					<i class="lab la-github la-2x"></i>
+				</a>
+			</div>
 		</header>
 		{{ template "content" . }}
 	</body>
