--- a/web/src/templates/base.html
+++ b/web/src/templates/base.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>{{ .Title }}</title>
 		<link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
 		{{ .ViteHead }}
+		{{ template "head" . }}
 	</head>
 	<body>
 		<header>
