--- a/web/src/templates/index.html
+++ b/web/src/templates/index.html
@@ -1,3 +1,6 @@
+{{ define "head" }}
+    <title>omga</title>
+    <meta property="og:title" content="omga.foo" />
+{{ end }}
 {{ define "content" }}
-
 {{ end }}
