--- a/web/src/templates/prismanis.html
+++ b/web/src/templates/prismanis.html
@@ -1,3 +1,9 @@
+{{ define "head" }}
+	<title>Prismanis</title>
+	<meta property="og:title" content="Prismanis" />
+	<meta property="og:description" content="Draw glass things and shine light on them" />
+	<meta property="og:type" content="website" />
+{{ end }}
 {{ define "content" }}
 <div class="relative grid grid-cols-[auto_1fr] h-full">
 	<aside class="relative sidebar rect border-t-0 border-l-0 border-b-0 h-full flex flex-col w-(--sidebar-width)">
