--- a/web/src/static/css/styles/base/theme.css
+++ b/web/src/static/css/styles/base/theme.css
@@ -42,11 +42,11 @@
                     background-color: var(--color-blue-400);
                 }
                 &.on-this-page {
-                    color: var(--color-purple-400);
+                    color: var(--color-blue-200);
                     background-clip: none;
                     background-image: none;
                     &::after {
-                        background-color: var(--color-purple-400);
+                        background-color: var(--color-blue-200);
                         transform: scaleX(1);
                     }
                 }
