add hostname to og images

--- a/web/src/templates/prismanis.html
+++ b/web/src/templates/prismanis.html
@@ -2,8 +2,8 @@
 	<title>Prismanis</title>
 	<meta property="og:title" content="Prismanis" />
 	<meta property="og:description" content="Draw glass things and shine light on them" />
-	<meta property="og:image" content="/static/assets/img/previews/prismanis.png" />
-	<meta property="og:logo" content="/static/assets/img/image.png" />
+	<meta property="og:image" content="{{ .Host }}/static/assets/img/previews/prismanis.png" />
+	<meta property="og:logo" content="{{ .Host }}/static/assets/img/image.png" />
 	<meta property="og:type" content="website" />
 {{ end }}
 {{ define "content" }}
