add canonical url to og

--- a/web/src/templates/prismanis.html
+++ b/web/src/templates/prismanis.html
@@ -2,6 +2,7 @@
 	<title>Prismanis</title>
 	<meta property="og:title" content="Prismanis" />
 	<meta property="og:description" content="Draw glass things and shine light on them" />
+	<meta property="og:url" content="{{ .Scheme }}://{{ .Host }}/prismanis" />
 	<meta property="og:image" content="{{ .Scheme }}://{{ .Host }}/static/assets/img/previews/prismanis.png" />
 	<meta property="og:logo" content="{{ .Scheme}}://{{ .Host }}/static/assets/img/image.png" />
 	<meta property="og:type" content="website" />
