--- a/web/src/templates/prismanis.html
+++ b/web/src/templates/prismanis.html
@@ -2,9 +2,9 @@
 	<title>Prismanis</title>
 	<meta property="og:title" content="Prismanis" />
 	<meta property="og:description" content="Draw glass things and shine light on them" />
-	<meta property="og:url" content="{{ .Scheme }}://{{ .Host }}/prismanis" />
-	<meta property="og:image" content="{{ .Scheme }}://{{ .Host }}/static/assets/img/previews/prismanis.png" />
-	<meta property="og:logo" content="{{ .Scheme}}://{{ .Host }}/static/assets/img/image.png" />
+	<meta property="og:url" content="{{ .Protocol }}://{{ .Host }}/prismanis" />
+	<meta property="og:image" content="{{ .Protocol }}://{{ .Host }}/static/assets/img/previews/prismanis.png" />
+	<meta property="og:logo" content="{{ .Protocol }}://{{ .Host }}/static/assets/img/image.png" />
 	<meta property="og:type" content="website" />
 {{ end }}
 {{ define "content" }}
