add site_name og tag

--- a/web/src/templates/prismanis.html
+++ b/web/src/templates/prismanis.html
@@ -1,6 +1,7 @@
 {{ define "head" }}
 	<title>Prismanis</title>
 	<meta property="og:title" content="Prismanis" />
+	<meta property="og:site_name" content="Prismanis" />
 	<meta property="og:description" content="Draw glass things and shine light on them" />
 	<meta property="og:url" content="{{ .Protocol }}://{{ .Host }}/prismanis" />
 	<meta property="og:image" content="{{ .Protocol }}://{{ .Host }}/static/assets/img/previews/prismanis.png" />
