add twitter:card meta tag

--- a/web/src/templates/prismanis.html
+++ b/web/src/templates/prismanis.html
@@ -7,6 +7,7 @@
 	<meta property="og:image" content="{{ .Protocol }}://{{ .Host }}/static/assets/img/previews/prismanis.png" />
 	<meta property="og:logo" content="{{ .Protocol }}://{{ .Host }}/static/assets/img/image.png" />
 	<meta property="og:type" content="website" />
+	<meta name="twitter:card" content="summary_large_image" />
 {{ end }}
 {{ define "content" }}
 <div class="relative grid grid-cols-[auto_1fr] h-full">
