add the cards game prototype

--- a/web/src/templates/base.html
+++ b/web/src/templates/base.html
@@ -15,6 +15,7 @@
 				<img src="/static/assets/img/image.png" alt="Logo" class="logo" />
 				<a href="/" class='pretty-link {{ if eq .Page "/" }} on-this-page {{ end }}'>Index</a>
 				<a href="/prismanis" class='pretty-link {{ if eq .Page "/prismanis" }} on-this-page {{ end }}'>Prismanis</a>
+				<a href="/cards" class='pretty-link {{ if eq .Page "/cards" }} on-this-page {{ end }}'>Cards</a>
 			</div>
 			<div class="left">
 				<a href="https://github.com/omgaXD/omgafoo" target="_blank">
