--- a/web/src/templates/cards.html
+++ b/web/src/templates/cards.html
@@ -8,7 +8,7 @@
 			</p>
 		</div>
 		<div id="field" class="font-mono gap-2 grid grid-cols-7 grid-rows-7 text-center"></div>
-		<input id="input" type="text" placeholder="e3ul" class="mx-12" />
+		<div class="flex w-full px-12"><input id="input" type="text" placeholder="e3ul" class="w-full text-3xl" /></div>
         <div class="flex flex-col gap-4 w-full px-4 max-w-2xl *:[p]:text-base *:[p]:text-stone-300 **:[b]:text-white">
             <h2>Rules</h2>
             <p>
