--- a/web/src/templates/cards.html
+++ b/web/src/templates/cards.html
@@ -1,32 +1,33 @@
 {{ define "head" }} {{ end }} {{ define "content" }}
 <div class="flex flex-col items-center">
-	<div class="flex flex-col w-fit gap-12 *:text-3xl">
+	<div class="flex flex-col w-fit gap-12 *:text-3xl pb-4 max-w-lg">
 		<div id="info">
 			<p id="turn-of" class="text-center">...</p>
 			<p class="text-3xl text-gray-500 text-center">
 				<span id="p1-score" class="text-blue-500"></span> : <span id="p2-score" class="text-red-500"></span>
 			</p>
 		</div>
-		<div id="field" class="font-mono gap-2 grid grid-cols-7 grid-rows-7 text-center"></div>
+		<div id="field" class="font-mono gap-1 grid grid-cols-7 grid-rows-7 text-center mx-auto w-3/4"></div>
 		<div class="flex w-full px-12"><input id="input" type="text" placeholder="e3ul" class="w-full text-3xl" /></div>
-        <div class="flex flex-col gap-4 w-full px-4 max-w-2xl *:[p]:text-base *:[p]:text-stone-300 **:[b]:text-white">
-            <h2>Rules</h2>
+		<div class="flex flex-col gap-4 w-full px-4 *:[p]:text-base *:[p]:text-stone-300 **:[b]:text-white ">
+			<h2>Rules</h2>
             <p>
-                Players take turn to move exactly one piece. Pieces can only move onto <span class="text-stone-500">#</span> tiles.
+                Players take turn to move exactly one piece. Pieces can only move onto
+                <span class="text-stone-500">#</span> tiles.
+                Weak pieces (<i class="text-blue-500 lar la-circle"></i>,<i class="text-red-500 lar la-circle"></i>)
+                move one tile. Strong pieces (<i class="text-blue-500 lar la-dot-circle"></i>,<i
+                    class="text-red-500 lar la-dot-circle"
+                ></i
+                >) move <b>exactly</b> two tiles.
+                A piece collects all <span class="text-stone-500">#</span> tiles on its way, adding them to the current
+                player's score.
             </p>
             <p>
-                Small pieces (<i class="text-blue-500">x</i>, <i class="text-red-500">y</i>) move one tile. Big pieces (<i class="text-blue-500">X</i>, <i class="text-red-500">Y</i>) move <b>exactly</b> two tiles.
-                A piece collects all tiles on its way, adding it to current player's score.
+                By moving a piece, the players can make some other pieces have no valid moves, petrifying them. The
+                petrified pieces are collected & added to the <b>current</b> player's score.
+                Players are forced to skip a turn if they have no moves. When both players have no moves, the player with the greatest score wins. A tie is possible.
             </p>
-            <p>
-                By moving, a player can make some other pieces have no valid moves.
-                This is called "murder" and the murdered pieces are removed from the field and added to the <b>murderer's</b> score.
-            </p>
-            <p>
-                If only one player has valid moves, that player moves till the end of the game.
-                When both players have no valid moves, the game ends. The one with larger score wins.
-            </p>
-        </div>
+		</div>
 	</div>
 </div>
 {{ end }}
